@@ -1,9 +1,10 @@
 <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
 <meta charset="UTF-8">
   <!--Apps Page-->
-<a href="./apps.html" style="text-decoration: none;">
-<h3 style="text-align: right; font-family: arial; color: #fff; font-size: 24px; margin-right: 1.25%;">Apps</h3>
-</a>
+<div style="text-align: right; font-family: arial; color: #fff; font-size: 24px; margin-right: 1.25%;">
+  <a href="./changelog.txt" style="text-decoration: none; color: #fff;">
+    <h3>Changelog I<a href="./apps.html" style="text-decoration: none; color: #fff;">I Apps</h3>
+  </a>
 
   <!--Classes-->
   <title>Selecting Game</title>
@@ -57,4 +58,5 @@
                                       <a href="https://spew45.github.io/simple-games-assets/src/basketball-stars/"><img src="./img/basketball-stars.png" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="basketball-stars" target="_blank"></a>
                                         <a href="https://spew45.github.io/simple-games-assets/src/geometry/"><img src="./img/geometry-dash.png" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="geometry-dash" target="_blank"></a>
                                           <a href="https://spew45.github.io/simple-games-assets/src/getaway-shootout/"><img src="./img/getaway-shootout.png" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="getaway-shootout" target="_blank"></a>
+                                            <a href="https://spew45.github.io/simple-games-assets/src/getaway-shootout/"><img src="./img/zombs-royale.png" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="zombs-royale" target="_blank"></a>
 </body>
